# QMSD-ESP32-BSP

components-third-party/ui_engine/: CMakeLists.txt
example/lvgl-freetype/: CMakeLists.txt  partitions.csv  readme.md
example/lvgl-freetype/main/: CMakeLists.txt  idf_component.yml  main.c
